# nemesis-build

./: .gitignore  03.clean-all.bat  08.git-status.sh  10.build-final.sh  CMakeClean.sh  CMakeLists.txt  README  README.md  preinstall-hook  repositories
